# simple-chat

./: Cargo.toml  LICENSE  README.md  config-example.json
src/: main.rs
src/lib/: client.rs  commands.rs  config.rs  connection.rs  utils.rs
