[package]
name = "simple-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
# https://github.com/hrxi/tracing-loki/issues/32
tracing-loki = { git = "https://github.com/gabrik/tracing-loki", branch = "fix/ram-usage" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
uuid = {version = "1.16.0", features = ["v4"] }
